<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/area"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_capital"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/region"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_area"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_subregion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/subRegion"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_region"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_coord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/coordinates"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_subregion"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_borders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/borders"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_native_name"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/population"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_coord"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_timezones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/timezone"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_population"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_native_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/native_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_timezones"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_capital_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/capital"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/tv_capital"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="24dp"/>

    <TextView
        android:id="@+id/tv_area_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/area"
        app:layout_constraintTop_toTopOf="@id/tv_area"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_region_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/region"
        app:layout_constraintTop_toTopOf="@id/tv_region"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_subregion_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/subRegion"
        app:layout_constraintTop_toTopOf="@id/tv_subregion"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_coord_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/coordinates"
        app:layout_constraintTop_toTopOf="@id/tv_coord"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_borders_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/borders"
        app:layout_constraintLeft_toLeftOf="@id/tv_capital"
        app:layout_constraintTop_toBottomOf="@id/tv_borders"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/tv_population_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/population"
        app:layout_constraintTop_toTopOf="@id/tv_population"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_timezones_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/timezone"
        app:layout_constraintTop_toTopOf="@id/tv_timezones"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>

    <TextView
        android:id="@+id/tv_native_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/native_name"
        app:layout_constraintTop_toTopOf="@id/tv_native_name"
        app:layout_constraintRight_toRightOf="@id/tv_capital_value"/>
</android.support.constraint.ConstraintLayout>