<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/tv_acronym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acronym"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_bloc_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="@id/tv_acronym"
        app:layout_constraintTop_toBottomOf="@id/tv_acronym"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/tv_acronym_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acronym"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_acronym" />

    <TextView
        android:id="@+id/tv_bloc_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/regional_bloc"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_acronym_value"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_bloc_name" />

</android.support.constraint.ConstraintLayout>